--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,18 @@
 {
   "version": 2,
   "functions": {
-    "index.js": {
+    "api/index.js": {
       "maxDuration": 10
     }
   },
   "routes": [
     {
       "src": "/(\\d+)",
-      "dest": "/index.js",
-      "methods": ["GET"]
+      "dest": "/api/index.js"
     },
     {
       "src": "/",
-      "dest": "/index.js",
-      "methods": ["GET"]
+      "dest": "/api/index.js"
     }
   ]
 }
